samples/_failures_safe/1761344573_b78002_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_92497568.c: In function ‘main’:
./samples/SAFE/__tmp_92497568.c:158:5: error: expected expression at end of input
  158 |     for (int i = 0; i <
      |     ^~~
./samples/SAFE/__tmp_92497568.c:158:5: error: expected declaration or statement at end of input
